--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "test:watch": "ng test --watch",
+    "format": "npx prettier --write $(git diff --name-only -- '*.ts' '*.spec.ts' '*.html' '*.css' '*.scss')",
+    "format-all:check": "npx prettier . --check",
+    "format-all:write": "npx prettier . --write",
+    "prepare": "husky"
   },
   "private": true,
   "dependencies": {
@@ -32,13 +37,14 @@
     "@angular/cli": "~19.0.6",
     "@angular/compiler-cli": "^19.0.5",
     "@types/jasmine": "~4.3.0",
+    "husky": "^9.1.7",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "prettier": "3.4.2",
+    "prettier": "^3.4.2",
     "typescript": "~5.6.3"
   }
 }
