--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "test:watch": "ng test --watch",
+    "test:coverage": "ng test --code-coverage",
     "format": "npx prettier --write $(git diff --name-only -- '*.ts' '*.spec.ts' '*.html' '*.css' '*.scss')",
     "format-all:check": "npx prettier . --check",
     "format-all:write": "npx prettier . --write",
