--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "prettier": "^3.4.2",
-    "typescript": "~5.6.3"
+    "typescript": "~5.6.3",
+    "webpack-bundle-analyzer": "^4.10.2"
   }
 }
