--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser": "^19.0.5",
     "@angular/platform-browser-dynamic": "^19.0.5",
     "@angular/router": "^19.0.5",
+    "@ngx-translate/core": "^16.0.4",
+    "@ngx-translate/http-loader": "^16.0.1",
     "@primeng/themes": "^19.0.2",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
@@ -35,6 +37,7 @@
     "@angular-devkit/build-angular": "^19.0.6",
     "@angular/cli": "~19.0.6",
     "@angular/compiler-cli": "^19.0.5",
+    "@angular/localize": "^19.0.5",
     "@types/jasmine": "~4.3.0",
     "husky": "^9.1.7",
     "jasmine-core": "~4.6.0",
