Add CI/CD unit tests

--- a/.github/workflows/build_check.yml
+++ b/.github/workflows/build_check.yml
@@ -22,3 +22,7 @@ jobs:
 
       - name: build aplication
         run: npm run build
+        
+      - name: run unit tests
+        run: npm run test -- --watch=false --browsers=ChromeHeadless
+
