--- a/.github/workflows/build_check.yml
+++ b/.github/workflows/build_check.yml
@@ -22,7 +22,8 @@ jobs:
 
       - name: build aplication
         run: npm run build
-        
-      - name: run unit tests
-        run: npm run test -- --watch=false --browsers=ChromeHeadless
 
+      - name: run unit tests
+        run: |
+          nohup Xvfb :99 & export DISPLAY=:99
+          npm run test -- --watch=false --browsers=Chrome
