--- a/.github/workflows/build_check.yml
+++ b/.github/workflows/build_check.yml
@@ -24,6 +24,4 @@ jobs:
         run: npm run build
 
       - name: run unit tests
-        run: |
-          nohup Xvfb :99 & export DISPLAY=:99
-          npm run test -- --watch=false --browsers=Chrome
+        run: npm run test -- --watch=false --browsers=ChromeHeadless
