--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,10 +23,5 @@ jobs:
       - name: build application
         run: npm run build
 
-      - name: install Chromium
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y chromium-browser
-
       - name: run unit tests
-        run: npm run test -- --watch=false --browsers=Chrome,ChromeHeadless
+        run: npm run test 
