--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "npx prettier --write $(git diff --name-only -- '*.ts' '*.spec.ts' '*.html' '*.css' '*.scss')",
     "format-all:check": "npx prettier . --check",
     "format-all:write": "npx prettier . --write",
+    "lint": "ng lint",
     "prepare": "husky"
   },
   "private": true,
@@ -39,6 +40,12 @@
     "@angular/compiler-cli": "^19.0.5",
     "@angular/localize": "^19.0.5",
     "@types/jasmine": "~4.3.0",
+    "angular-eslint": "19.0.2",
+    "eslint": "^9.16.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "husky": "^9.1.7",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
@@ -48,6 +55,7 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "prettier": "^3.4.2",
     "typescript": "~5.6.3",
+    "typescript-eslint": "8.18.0",
     "webpack-bundle-analyzer": "^4.10.2"
   }
 }
